--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -16,21 +16,48 @@
             }
         }
         ul{
-            width: 30%;
+            min-width: 30%;
             justify-content: space-between;
-            a{
-                text-decoration: none;
-                color: white;
-                font-size: 1.2em;
-                align-self: center;
-                padding: 1em;
-                li{
-                list-style: none;
-                }
-                &:hover{
-                    background: red;
-                }
-            }
         }
+    }
+}
+a{
+    text-decoration: none;
+    color: yellow;
+    font-size: 1.2em;
+    align-self: center;
+    padding: 1em;
+    li{
+    list-style: none;
+    }
+    &:hover{
+        background: red;
+    }
+}
+#mobile-menu{
+    display: none;
+    background: green;
+    text-align: center;
+    ul{
+        padding: 0;
+    }
+}
+#mobile-nav-menu-icon{
+    display: none;
+    align-self: center;
+}
+
+
+@media screen and (max-width: 800px){
+    #desktop-menu{
+        display: none;
+    }
+    #mobile-nav-menu-icon{
+        display: block;
+        align-self: center;
+    }
+    #mobile-menu{
+        display: block;
+        height: 50vh;
     }
 }
