--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,14 @@
 <div id="nav-wrapper">
   <div id="nav-content" class="container flexRow jc-space-between">
     <a routerLink="/">
-      <h2> LogoHere </h2>
+      <h4> Podium </h4>
     </a>
     <ul class="flexRow" id="desktop-menu">
       <a routerLink="/">
         <li> Home </li>
+      </a>
+      <a routerLink="/legends">
+        <li> Legends </li>
       </a>
       <a routerLink="/about">
         <li> About </li>
@@ -17,22 +20,30 @@
         <li> Log In </li>
       </a>
     </ul>
-    <div id="mobile-nav-menu-icon"> icon </div>
+    <div *ngIf="!visible" (click)="openMobileNav()" id="mobile-nav-menu-icon">
+      <i class="material-icons"> menu </i>
+    </div>
+    <div *ngIf="visible" (click)="closeMobileNav()" id="mobile-nav-menu-icon">
+      <i class="material-icons"> close </i>
+    </div>
   </div>
 
 </div>
 <div id="mobile-menu">
   <ul>
-    <a routerLink="/">
+    <a routerLink="/" (click)="closeMobileNav()">
       <li> Home </li>
     </a>
-    <a routerLink="/about">
+    <a routerLink="/legends" (click)="closeMobileNav()">
+      <li> Legends </li>
+    </a>
+    <a routerLink="/about" (click)="closeMobileNav()">
       <li> About </li>
     </a>
-    <a routerLink="/contact">
+    <a routerLink="/contact" (click)="closeMobileNav()">
       <li> Contact Us</li>
     </a>
-    <a routerLink="/login">
+    <a routerLink="/login" (click)="closeMobileNav()">
       <li> Log In </li>
     </a>
   </ul>
