--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,6 +1,9 @@
 #nav-wrapper{
-    background: blue;
+    position: fixed;
+    width: 100%;
+    background: linear-gradient(90deg, #df4545 0%, #a50d0d 100%);
     height: 68px;
+    z-index: 999999;
     #nav-content{
         height: 100%;
         width: 100%;
@@ -12,7 +15,7 @@
             align-self: center;
             padding: 1.2em;
             &:hover{
-                background: red;
+                text-decoration: underline;
             }
         }
         ul{
@@ -23,30 +26,41 @@
 }
 a{
     text-decoration: none;
-    color: yellow;
+    color: white;
     font-size: 1.2em;
     align-self: center;
     padding: 1em;
     li{
     list-style: none;
     }
-    &:hover{
-        background: red;
-    }
 }
 #mobile-menu{
-    display: none;
-    background: green;
+    background: linear-gradient(90deg, #df4545 0%, #a50d0d 100%);
     text-align: center;
+    position: fixed;
+    top: 68px;
+    width: 100%;
+    height: 0;
+    visibility: hidden; /* hides sub-menu */
+    opacity: 0;
+    transform: translateY(-2em);
+    z-index: 0;
+    transition: all 0.3s ease-in-out 0s, visibility 0s linear 0.4s;
     ul{
         padding: 0;
+        margin-top: 10vh;
+        height: 40vh;
+        display: flex;
+        flex-flow: column;
+        justify-content: space-between;
     }
 }
-#mobile-nav-menu-icon{
-    display: none;
-    align-self: center;
+@media screen and (min-width: 800px){
+    #mobile-nav-menu-icon{
+        display: none;
+        align-self: center;
+    }
 }
-
 
 @media screen and (max-width: 800px){
     #desktop-menu{
@@ -56,8 +70,5 @@ a{
         display: block;
         align-self: center;
     }
-    #mobile-menu{
-        display: block;
-        height: 50vh;
-    }
 }
+
