--- a/src/app/legendspage/legendspage.component.scss
+++ b/src/app/legendspage/legendspage.component.scss
@@ -5,3 +5,10 @@ h2{
     padding-top: 100px;
     font-size: 2.5em;
 }
+
+@media screen and (max-width: 800px){
+    img{
+        max-height: 100vh;
+        padding: 0;
+    }
+}
