--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 #nav-wrapper{
     position: fixed;
-    width: 100%;
+    width: 100vw;
     background: linear-gradient(90deg, #df4545 0%, #a50d0d 100%);
     height: 68px;
     z-index: 999999;
@@ -13,7 +13,7 @@
             text-decoration: none;
             color: white;
             align-self: center;
-            padding: 1.2em;
+            padding: 10px;
             &:hover{
                 text-decoration: underline;
             }
