components loading, routing fixed, first dataservice implemented to share legend info

--- a/src/app/legendspage/legendspage.component.html
+++ b/src/app/legendspage/legendspage.component.html
@@ -1,38 +1,13 @@
 <h2> LEGENDS </h2>
 <div id="legend-wrapper" class="row">
-  <section id="legend-list" class="col col-sm-12 col-md-4">
+  <section id="legend-list" class="col col-sm-12">
     <ul>
-      <li *ngFor="let legend of legendList">
-        <a routerLink="/legends/{{legend.name}}"> {{legend.name}} </a>
+      <li *ngFor="let legend of legendDetails">
+        <a (click)="changeLegend(legend.name)" routerLink="/legends/{{legend.name}}">
+          <img src="{{legend.portrait}}" alt={{legend.name}}>
+          <p>{{legend.name}}</p>
+        </a>
       </li>
     </ul>
-    <!-- on legend click, scroll to image of legend component -->
-  </section>
-  <!-- i want to add carousel of all skins -->
-
-  <!-- *ngIf="legendService.currentLegend.length" -->
-  <!-- *ngFor="let selected of legendService.currentLegend" -->
-  <!-- iterate through remaining html using selected legend to pull proper information -->
-  
-  <img src="../../assets/bloodhound2.PNG" class="col col-sm-12 col-md-4" alt="legend-portrait">
-  <section  id="legend-description" class="col col-sm-12 col-md-4">
-    <div class="flexCol">
-      <h3> {{this.legendDetails.bangalore.passive}} </h3>
-      <h5> Passive </h5>
-      <p> Foes leave behind clues for you to find.</p>
-    </div>
-    <div class="divider"></div>
-    <div class="flexCol">
-      <h3> Eye of the Allfather</h3>
-      <h5> Tactical </h5>
-      <p> Briefly reveal enemies, traps, and clues through all structures in front of you.</p>
-    </div>
-    <div class="divider"></div>
-    <div class="flexCol">
-      <h3> Beast of the Hunter</h3>
-      <h5> Ultimate </h5>
-      <p> Transform into the ultimate hunter. Enhances your senses, allow you to see cold tracks and move faster for a
-        duration.</p>
-    </div>
   </section>
 </div>
