--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div id="nav-wrapper">
   <div id="nav-content" class="container flexRow jc-space-between">
     <a routerLink="/">
-      <h4> Podium </h4>
+      <h4 id="brand-logo"> Podium </h4>
     </a>
     <ul class="flexRow" id="desktop-menu">
       <a routerLink="/">
