legends page functionality complete

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,1 +1,32 @@
 <p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
+<p> hmmm</p>
+<br>
