--- a/src/app/legendinfopage/legendinfopage.component.html
+++ b/src/app/legendinfopage/legendinfopage.component.html
@@ -1,27 +1,49 @@
-<div class="row" id="legend-info-page">
-  <div class="col-sm-12 col-md-2">
-    <img *ngIf="currentLegend" src={{this.data.legendDetails[this.data.legendLocation].portrait}} alt="legend-portrait">
+<button *ngIf=this.data.backwardLegendExists (click)="changeLegend(this.data.backwardLegend)" routerLink="/legends/{{this.data.backwardLegend}}"
+  id="backwardButton"> {{this.data.backwardLegend}} backwards </button>
+<button *ngIf=this.data.forwardLegendExists (click)="changeLegend(this.data.forwardLegend)" routerLink="/legends/{{this.data.forwardLegend}}"
+  id="forwardButton"> {{this.data.forwardLegend}} forwards </button>
+<div id="legend-info-page">
+  <h2> {{this.data.legendDetails[this.data.legendLocation].name}} </h2>
+  <div class="divider"></div>
+  <div class="row" id="infoArea">
+    <div class="col-sm-12 col-md-2">
+      <img *ngIf="currentLegend" src={{this.data.legendDetails[this.data.legendLocation].portrait}} alt="legend-portrait">
+    </div>
+    <section id="legend-description" class="col-sm-12 col-md-8">
+      <div *ngIf="currentLegend" class="flexCol">
+        <div class="row">
+          <img src={{this.data.legendDetails[this.data.legendLocation].passiveImage}} alt="passive-image" class="abilityImage">
+          <div class="col">
+            <h3> {{this.data.legendDetails[this.data.legendLocation].passive}} </h3>
+            <h5> Passive </h5>
+          </div>
+        </div>
+        <p> {{this.data.legendDetails[this.data.legendLocation].passiveDescription}}</p>
+      </div>
+      <div *ngIf="currentLegend" class="divider"></div>
+      <div *ngIf="currentLegend" class="flexCol">
+        <div class="row">
+          <img src={{this.data.legendDetails[this.data.legendLocation].tacticalImage}} alt="tactical-image" class="abilityImage">
+          <div class="col">
+            <h3> {{this.data.legendDetails[this.data.legendLocation].tactical}}</h3>
+            <h5> Tactical </h5>
+            <h4> Cooldown: {{this.data.legendDetails[this.data.legendLocation].tacticalCooldown}}</h4>
+          </div>
+        </div>
+        <p> {{this.data.legendDetails[this.data.legendLocation].tacticalDescription}} </p>
+      </div>
+      <div *ngIf="currentLegend" class="divider"></div>
+      <div *ngIf="currentLegend" class="flexCol">
+        <div class="row">
+          <img src={{this.data.legendDetails[this.data.legendLocation].ultimateImage}} alt="ultimate-image" class="abilityImage">
+          <div class="col">
+            <h3> {{this.data.legendDetails[this.data.legendLocation].ultimate}} </h3>
+            <h5> Ultimate </h5>
+            <h4> Charge Time: {{this.data.legendDetails[this.data.legendLocation].ultimateCooldown}}</h4>
+          </div>
+        </div>
+        <p> {{this.data.legendDetails[this.data.legendLocation].ultimateDescription}}</p>
+      </div>
+    </section>
   </div>
-  <section id="legend-description" class="col-sm-12 col-md-8">
-    <div *ngIf="currentLegend" class="flexCol">
-      <h3> {{this.data.legendDetails[this.data.legendLocation].passive}} </h3>
-      <h5> Passive </h5>
-      <p> {{this.data.legendDetails[this.data.legendLocation].passiveDescription}}</p>
-    </div>
-    <div *ngIf="currentLegend" class="divider"></div>
-    <div *ngIf="currentLegend" class="flexCol">
-      <h3> {{this.data.legendDetails[this.data.legendLocation].tactical}}</h3>
-      <h5> Tactical </h5>
-      <p> {{this.data.legendDetails[this.data.legendLocation].tacticalDescription}} </p>
-    </div>
-    <div *ngIf="currentLegend" class="divider"></div>
-    <div *ngIf="currentLegend" class="flexCol">
-      <h3> {{this.data.legendDetails[this.data.legendLocation].ultimate}} </h3>
-      <h5> Ultimate </h5>
-      <p> {{this.data.legendDetails[this.data.legendLocation].ultimateDescription}}</p>
-    </div>
-  </section>
 </div>
-<!-- add when there location is -1 button does not exist -->
-<button *ngIf=this.data.backwardLegendExists (click)="changeLegend(this.data.backwardLegend)" routerLink="/legends/{{this.data.backwardLegend}}"> {{this.data.backwardLegend}} backwards </button>
-<button *ngIf=this.data.forwardLegendExists (click)="changeLegend(this.data.forwardLegend)" routerLink="/legends/{{this.data.forwardLegend}}"> {{this.data.forwardLegend}} forwards </button>
