--- a/src/app/legendinfopage/legendinfopage.component.scss
+++ b/src/app/legendinfopage/legendinfopage.component.scss
@@ -1,3 +1,33 @@
+#backwardButton{
+position: absolute;
+top: 68px;
+left: 0px;
+z-index: 10;
+}
+#forwardButton{
+    position: absolute;
+    top: 68px;
+    right: 0px;
+    z-index: 10;
+}
+h2{
+    padding-top: 90px;
+    text-align: center;
+    font-size: 3em;
+}
+.row{
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 #legend-info-page{
-    padding-top: 80px;
+    width: 96%;
+    margin: 0 auto;
+};
+
+#infoArea{
+    margin-top: 40px;
+}
+.abilityImage{
+    height: 150px;
 }
