--- a/src/app/legendspage/legendspage.component.scss
+++ b/src/app/legendspage/legendspage.component.scss
@@ -1,42 +1,40 @@
 *{
     margin: 0 auto;
 }
-#legend-wrapper{
-    max-width: 100vw;
-}
-#legend-list{
-    ul{
-    display: flex;
-    flex-flow: row wrap;
-}
-}
 h2{
     padding-top: 90px;
+    margin-bottom: 20px;
     font-size: 2.5em;
-}
-h3{
-    margin: 10px auto;
+    text-align: center;
 }
 
-p{
-    margin: 10px auto;
-}
+#legend-wrapper{
+    max-width: 100vw;
 
-ul{
-    margin: 0 auto;
-    padding: 0;
-li{
-    list-style: none;
-    a{
-        text-decoration: none;
-        img{
-            height: 200px;
+    #legend-list{
+        ul{
+            display: flex;
+            flex-flow: row wrap;
+            margin: 0 auto;
+            padding: 0;
+            margin: 0 auto;
+            padding: 0;
+            li{
+                list-style: none;
+                margin-bottom: 10px;
+                a{
+                    text-decoration: none;
+                    img{
+                        height: 200px;
+                        width: 100%;
+                    }
+                    p{
+                    margin: 10px auto;
+                    }
+                }
+            }
         }
     }
-}
-#legend-portrait{
-    width: 100%;
-}
 }
 
 @media screen and (max-width: 800px){
