--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,9 @@
     box-sizing: border-box;
     font-family: 'Nova Flat', cursive;
 }
+body{
+    position: relative;
+}
 .container{
     max-width: 80%;
 }
