added dynamic legend header images for bangalore, need to do for rest of legends

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,32 +1,5 @@
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
-<p> hmmm</p>
-<br>
+<div id="homeContainer">
+    <div id="landingThing">
+        <h1> The Podium </h1>
+    </div>
+</div>
