--- a/src/app/legendinfopage/legendinfopage.component.html
+++ b/src/app/legendinfopage/legendinfopage.component.html
@@ -8,9 +8,10 @@
     <h2> {{this.data.legendDetails[this.data.legendLocation].name}} </h2>
   </div>
   <div class="row" id="infoArea">
-    <div class="col-sm-12 col-md-2">
+    <!-- <div class="col-sm-12 col-md-2">
       <img *ngIf="currentLegend" src="{{this.data.legendDetails[this.data.legendLocation].portrait}}" alt="legend-portrait">
-    </div>
+    </div> -->
+    <div class="col-sm-12 col-md-4"></div>
     <section id="legend-description" class="col-sm-12 col-md-8">
       <div *ngIf="currentLegend" class="flexCol">
         <div class="row">
