--- a/src/app/legendinfopage/legendinfopage.component.scss
+++ b/src/app/legendinfopage/legendinfopage.component.scss
@@ -20,7 +20,7 @@ z-index: 10;
     }
 }
 #headerImage{
-    margin-top: 60px;
+    margin-top: 40px;
     width: 100%;
 }
 h2{ 
@@ -62,6 +62,9 @@ h2{
             right: 0;
             top: 0px;
             width: 100%;
+        }
+        #headerImage{
+            margin-top: 60px;
         }
     }
 }
