minor css changes

--- a/src/app/legendspage/legendspage.component.html
+++ b/src/app/legendspage/legendspage.component.html
@@ -1,5 +1,5 @@
 <h2> LEGENDS </h2>
-<div id="legend-wrapper" class="row">
+<div id="legend-wrapper" class="container row">
   <section id="legend-list" class="col col-sm-12">
     <ul>
       <li *ngFor="let legend of legendDetails">
