--- a/src/app/legendspage/legendspage.component.scss
+++ b/src/app/legendspage/legendspage.component.scss
@@ -8,20 +8,22 @@ h2{
     text-align: center;
 }
 
+
 #legend-wrapper{
-    max-width: 100vw;
+    max-width: 80vw;
+    background: black;
+    padding-top: 40px;
+    padding-bottom: 30px;
 
     #legend-list{
         ul{
             display: flex;
             flex-flow: row wrap;
-            margin: 0 auto;
-            padding: 0;
-            margin: 0 auto;
-            padding: 0;
+            justify-content: space-around;
+            max-width: 50vw;
             li{
                 list-style: none;
-                margin-bottom: 10px;
+                margin: 10px 20px;
                 a{
                     text-decoration: none;
                     img{
@@ -30,6 +32,7 @@ h2{
                     }
                     p{
                     margin: 10px auto;
+                    text-align: center;
                     }
                 }
             }
