--- a/src/app/legendspage/legendspage.component.html
+++ b/src/app/legendspage/legendspage.component.html
@@ -1,8 +1,11 @@
-<h2> LEGENDS </h2>
-<div id="legend-wrapper" class="container row">
-  <section id="legend-list" class="col col-sm-12">
+<div id="legends-page-header">
+  <h2> Legend Dossier </h2>
+  <p> Which legend will you choose to become the next Apex Champion.</p>
+</div>
+<div id="legend-wrapper" class="row">
+  <section id="legend-list" class="col col-sm-12 col-md-6">
     <ul>
-      <li *ngFor="let legend of legendDetails">
+      <li *ngFor="let legend of legendDetails" class="legend-portrait">
         <a (click)="changeLegend(legend.name)" routerLink="/legends/{{legend.name}}">
           <img src="{{legend.portrait}}" alt={{legend.name}}>
           <p>{{legend.name}}</p>
