--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 #nav-wrapper{
     position: fixed;
     width: 100vw;
-    background: linear-gradient(90deg, #df4545 0%, #a50d0d 100%);
+    background: linear-gradient(90deg, #413939 0%, #000000 100%);
     height: 68px;
     z-index: 1000;
     #nav-content{
@@ -39,7 +39,7 @@ a{
     }
 }
 #mobile-menu{
-    background: linear-gradient(90deg, #df4545 0%, #a50d0d 100%);
+    background: linear-gradient(90deg, #413939 0%, #000000 100%);
     text-align: center;
     position: fixed;
     top: 67px;
