--- a/src/app/gunlocker/gunlocker.component.html
+++ b/src/app/gunlocker/gunlocker.component.html
@@ -1,1 +1,34 @@
 <h1> This will be where the rendering for weapons will be and will work on a filter system </h1>
+<a *ngFor="let type of this.data.weaponTypes">
+    <button routerLink="/gunlocker/{{type}}" (click)="this.data.updateType(type)">
+        <p>{{type}}</p>
+    </button>
+</a>
+<div *ngIf=this.data.weaponKeys>
+<a *ngFor="let weapon of this.data.weaponKeys">
+    <button routerLink="/gunlocker/{{this.data.currentType}}/{{weapon}}" (click)="this.data.updateWeapon(weapon)"> {{weapon}} </button>
+</a>
+</div>
+<div *ngIf=this.data.currentWeapon>
+    <h3> {{this.data.currentWeapon.name}}</h3>
+    <table>
+        <tr>
+            <th>Ammo Type</th>
+            <th>Fire Rate</th>
+            <th>Magazine Size</th>
+            <th>Body Damage</th>
+            <th>Headshot Damage</th>
+            <th>Hop</th>
+            <th>Location</th>
+        </tr>
+        <tr>
+            <td> {{this.data.weaponDetails[this.data.currentType][this.data.currentWeapon].ammoType}}</td>
+            <td> {{this.data.weaponDetails[this.data.currentType][this.data.currentWeapon].fireRate}}</td>
+            <td> {{this.data.weaponDetails[this.data.currentType][this.data.currentWeapon].magazineSize}}</td>
+            <td> {{this.data.weaponDetails[this.data.currentType][this.data.currentWeapon].bodyDamage}}</td>
+            <td> {{this.data.weaponDetails[this.data.currentType][this.data.currentWeapon].headshotDamage}}</td>
+            <td> {{this.data.weaponDetails[this.data.currentType][this.data.currentWeapon].hop}}</td>
+            <td> {{this.data.weaponDetails[this.data.currentType][this.data.currentWeapon].location}}</td>
+        </tr>
+    </table>
+</div>
