--- a/src/app/legendinfopage/legendinfopage.component.scss
+++ b/src/app/legendinfopage/legendinfopage.component.scss
@@ -37,10 +37,18 @@ h2{
 }
 
 #infoArea{
-    margin-top: 40px;
+    margin-top: 60px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.ability-description{
+    text-align: center;
 }
 .abilityImage{
     height: 150px;
+    width: 150px;
+    margin-bottom: 40px;
+    align-self: center;
 }
 
 @media screen and (max-width: 780px){
@@ -61,10 +69,21 @@ h2{
             text-align: center;
             right: 0;
             top: 0px;
+            margin-top: 40px;
+            margin-bottom: 30px;
             width: 100%;
         }
         #headerImage{
             margin-top: 60px;
         }
+    }
+    #infoArea{
+        margin-top: 20px;
+    }
+    .abilityImage{
+        margin-bottom: 20px;
+    }
+    .ability-description{
+        margin-bottom: 40px;
     }
 }
