--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,21 @@
 <div id="homeContainer">
-    <div id="landingThing">
-        <h1> The Podium </h1>
+    <div id="imagesContainer">
+        <!-- video requires connecting to ea's own site to allow it to pull video -->
+        <video id="video" autoplay loop>
+            <source src="https://media.contentapi.ea.com/content/dam/apex-legends/videos/2019/01/apex-section-video-home-usp.webm"
+                type="video/webm">
+            <source srcset="https://media.contentapi.ea.com/content/dam/apex-legends/videos/2019/01/apex-section-video-home-usp.mp4"
+                type="video/mp4">
+            Your browser does not support the video tag
+        </video>
+        <img id="image" src="https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-section-bg-battle-royale-video-xl.jpg.adapt.320w.jpg"
+            alt="" srcset="https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-section-bg-battle-royale-video-xl.jpg.adapt.320w.jpg 320w, https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-section-bg-battle-royale-video-xl.jpg.adapt.768w.jpg 768w, https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-section-bg-battle-royale-video-xl.jpg.adapt.1024w.jpg 1024w, https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-section-bg-battle-royale-video-xl.jpg.adapt.1456w.jpg 1320w, https://media.contentapi.ea.com/content/dam/apex-legends/common/apex-section-bg-battle-royale-video-xl.jpg.adapt.1920w.jpg 1456w">
+    </div>
+    <div id="sectionContainer">
+        <div id="shapeHeader">
+            <h1> The Podium </h1>
+            <h3> Your Hot Drop location for Apex Legends Information</h3>
+        </div>
+        <div id="firstSection"> first section</div>
     </div>
 </div>
