--- a/src/app/legendinfopage/legendinfopage.component.html
+++ b/src/app/legendinfopage/legendinfopage.component.html
@@ -7,26 +7,29 @@
     <img src={{this.currentHeaderImage}} alt="legend-header-image" id="headerImage">
     <h2> {{this.data.legendDetails[this.data.legendLocation].name}} </h2>
   </div>
-  <section class="row container" id="infoArea">
+  <section class="row" id="infoArea">
+    <img id="abilityBackground" class="col" src={{this.data.legendDetails[this.data.legendLocation].abilityBackground}}>
+    <div id="infoContainer" class="row">
     <div *ngIf="currentLegend" class="flexCol ability-description col-md-4 col-sm-12">
       <img src={{this.data.legendDetails[this.data.legendLocation].passiveImage}} alt="passive-image" class="abilityImage">
-        <h3> {{this.data.legendDetails[this.data.legendLocation].passive}} </h3>
-        <h5> Passive </h5>
-        <p> {{this.data.legendDetails[this.data.legendLocation].passiveDescription}}</p>
+      <h3> {{this.data.legendDetails[this.data.legendLocation].passive}} </h3>
+      <h5> Passive </h5>
+      <p> {{this.data.legendDetails[this.data.legendLocation].passiveDescription}}</p>
     </div>
     <div *ngIf="currentLegend" class="flexCol ability-description col-md-4 col-sm-12">
       <img src={{this.data.legendDetails[this.data.legendLocation].tacticalImage}} alt="tactical-image" class="abilityImage">
-        <h3> {{this.data.legendDetails[this.data.legendLocation].tactical}}</h3>
-        <h5> Tactical </h5>
-        <h4> Cooldown: {{this.data.legendDetails[this.data.legendLocation].tacticalCooldown}}</h4>
-        <p> {{this.data.legendDetails[this.data.legendLocation].tacticalDescription}} </p>
+      <h3> {{this.data.legendDetails[this.data.legendLocation].tactical}}</h3>
+      <h5> Tactical </h5>
+      <h4> Cooldown: {{this.data.legendDetails[this.data.legendLocation].tacticalCooldown}}</h4>
+      <p> {{this.data.legendDetails[this.data.legendLocation].tacticalDescription}} </p>
     </div>
     <div *ngIf="currentLegend" class="flexCol ability-description col-md-4 col-sm-12">
       <img src={{this.data.legendDetails[this.data.legendLocation].ultimateImage}} alt="ultimate-image" class="abilityImage">
-        <h3> {{this.data.legendDetails[this.data.legendLocation].ultimate}} </h3>
-        <h5> Ultimate </h5>
-        <h4> Charge Time: {{this.data.legendDetails[this.data.legendLocation].ultimateCooldown}}</h4>
-        <p> {{this.data.legendDetails[this.data.legendLocation].ultimateDescription}}</p>
+      <h3> {{this.data.legendDetails[this.data.legendLocation].ultimate}} </h3>
+      <h5> Ultimate </h5>
+      <h4> Charge Time: {{this.data.legendDetails[this.data.legendLocation].ultimateCooldown}}</h4>
+      <p> {{this.data.legendDetails[this.data.legendLocation].ultimateDescription}}</p>
     </div>
+  </div>
   </section>
 </div>
