--- a/src/app/legendinfopage/legendinfopage.component.scss
+++ b/src/app/legendinfopage/legendinfopage.component.scss
@@ -1,3 +1,9 @@
+#legend-info-page{
+    position: relative;
+    background: black;
+    height: 100%;
+    width: 100%;
+}
 #backwardButton{
 position: absolute;
 top: 68px;
@@ -26,7 +32,6 @@ z-index: 10;
 h2{ 
     text-align: center;
     font-size: 3em;
-    margin-bottom: 20px;
 }
 .divider{
     margin-bottom: 40px;
@@ -37,12 +42,35 @@ h2{
 }
 
 #infoArea{
-    margin-top: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
+    #abilityBackground{
+        height: 700px;
+        padding: 0;
+        position: absolute;
+        top: 0;
+        object-fit: cover;
+    }
+}
+#infoContainer{
+    margin-top: 200px;
+    width: 80%;
 }
 .ability-description{
     text-align: center;
+    h3{
+        padding: 0;
+        height: 66px;
+    }
+    h5{
+        margin-bottom: 10px;
+        height: 30px;
+    }
 }
 .abilityImage{
     height: 150px;
@@ -51,24 +79,31 @@ h2{
     align-self: center;
 }
 
+@media screen and (max-width: 980px){
+    #infoContainer{
+        margin-top: 150px;
+        width: 100%;
+    }
+}
 @media screen and (max-width: 780px){
     #header{
         h2{
-            position: relative;
             text-align: center;
             right: 0;
-            top: -250px;
+            bottom: 0;
             width: 100%;
         }
+    }
+    .abilityImage{
+        margin-bottom: 20px;
+    }
+    .ability-description{
+        margin-bottom: 40px;
     }
 }
 @media screen and (max-width: 460px){
     #header{
         h2{
-            position: relative;
-            text-align: center;
-            right: 0;
-            top: 0px;
             margin-top: 40px;
             margin-bottom: 30px;
             width: 100%;
@@ -77,13 +112,5 @@ h2{
             margin-top: 60px;
         }
     }
-    #infoArea{
-        margin-top: 20px;
-    }
-    .abilityImage{
-        margin-bottom: 20px;
-    }
-    .ability-description{
-        margin-bottom: 40px;
-    }
+
 }
