--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,8 @@
 <div id="nav-wrapper">
   <div id="nav-content" class="container flexRow jc-space-between">
-    <a routerLink="/">
-      <h4 id="brand-logo"> Podium </h4>
+    <a id="logoLink" routerLink="/">
+      <img id="brand-logo" src="../../assets/images/podiumLogo.png" alt="logoImage">
+      <h4> The Podium </h4>
     </a>
     <ul class="flexRow" id="desktop-menu">
       <a href="/">
