--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -25,8 +25,12 @@
         }
     }
 }
+
 #brand-logo{
     margin: 0;
+    padding: 0;
+    height: 60px;
+    display: none;
 }
 a{
     text-decoration: none;
@@ -71,6 +75,19 @@ a{
     #mobile-nav-menu-icon{
         display: block;
         align-self: center;
+    }
+    #logoLink{
+        padding: 0;
+        h4{
+            display: none;
+        }
+    
+        #brand-logo{
+            margin: 0;
+            padding: 0;
+            height: 60px;
+            display: block;
+        }
     }
 }
 
