--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 }
 body{
     position: relative;
+    background: black;
 }
 .container{
     max-width: 80%;
@@ -42,7 +43,7 @@ body{
     margin: 10px auto;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 980px) {
 .flexMediaRowToCol{
     flex-flow: column;
 }
