--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div id="nav-wrapper">
-  <div id="nav-content" class="container flexRow jc-space-between">
+  <div id="nav-content" class="flexRow jc-space-between">
     <a id="logoLink" routerLink="/">
       <img id="brand-logo" src="../../assets/images/podiumLogo.png" alt="logoImage">
       <h4> The Podium </h4>
