--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,7 +9,8 @@ body{
     background: black;
 }
 .container{
-    max-width: 80%;
+    max-width: 1440px;
+    margin: 0 auto;
 }
 .flexRow{
     display: flex;
