--- a/src/app/gunlocker/gunlocker.component.scss
+++ b/src/app/gunlocker/gunlocker.component.scss
@@ -13,8 +13,18 @@ td{
 padding: 0 10px;
 }
 
-@media 
-only screen and (max-width: 760px),
+.typeButton{
+    background-size: cover;
+    height: 100px;
+    width: 200px;
+    cursor: pointer;
+}
+
+#gunlocker-wrapper{
+    padding-top: 118px;
+}
+
+@media only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
 
 	/* Force table to not be like tables anymore */
@@ -33,5 +43,12 @@ only screen and (max-width: 760px),
             width: 50vw;
             text-align: right;
         }
+    }
+    .container{
+        width: 90vw;
+    }
+    .typeButton{
+        height: 70px;
+        width: 140px;
     }
 }
