--- a/src/app/gunlocker/gunlocker.component.scss
+++ b/src/app/gunlocker/gunlocker.component.scss
@@ -18,32 +18,25 @@ padding: 0 10px;
     height: 100px;
     width: 200px;
     cursor: pointer;
+    // &:focus{
+    //     outline: none !important;
+    //     transition: ease-out, transform .225s ease-in-out;
+    //     transform: scale(1.2);
+    // }
 }
 
 #gunlocker-wrapper{
     padding-top: 118px;
+    color: white;
 }
 
-@media only screen and (max-width: 760px),
-(min-device-width: 768px) and (max-device-width: 1024px)  {
+.containerTwo{
+    width: 60vw;
+    margin: 0 auto;
+    margin-top: 20px;
+}
 
-	/* Force table to not be like tables anymore */
-	table, thead, tbody, th, td, tr { 
-		display: block; 
-    }
-    tbody{
-        display: flex;
-        flex-flow: row nowrap;
-        justify-content: space-around;
-        #table-headers{
-            width: 50vw;
-            text-align: left;
-        }
-        #table-data{
-            width: 50vw;
-            text-align: right;
-        }
-    }
+@media only screen and (max-width: 780px){
     .container{
         width: 90vw;
     }
